--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,18 @@ dash-mantine-components==0.2.0
 dash-table==5.0.0
 Flask==2.0.2
 Flask-Compress==1.10.1
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
+numpy==1.21.4
+pandas==1.3.4
 pathspec==0.9.0
 platformdirs==2.4.0
 plotly==5.4.0
+python-dateutil==2.8.2
+pytz==2021.3
 regex==2021.11.10
 six==1.16.0
 tenacity==8.0.1
