--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dash-mantine-components = "^0.3.0"
 dash-iconify = "^0.0.1"
 dash-labs = "^1.0.1"
 mistune = "^2.0.2"
+pandas = "^1.3.5"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
