--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dash-iconify = "^0.1.0"
 dash-labs = "^1.0.1"
 mistune = "^2.0.2"
 pandas = "^1.3.5"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
