--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dash-table==5.0.0; python_version >= "3.6"
 dash==2.0.0; python_version >= "3.6"
 flask-compress==1.10.1; python_version >= "3.6"
 flask==2.0.2; python_version >= "3.6"
+gunicorn==20.1.0; python_version >= "3.5"
 itsdangerous==2.0.1; python_version >= "3.6"
 jinja2==3.0.3; python_version >= "3.6"
 markupsafe==2.0.1; python_version >= "3.6"
