--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and p
 dash-core-components==2.0.0; python_version >= "3.6"
 dash-html-components==2.0.0; python_version >= "3.6"
 dash-iconify==0.1.0
-dash-labs==1.0.1; python_version >= "3.6"
+dash-labs==1.0.2; python_version >= "3.6"
 dash-mantine-components==0.3.1
 dash-table==5.0.0; python_version >= "3.6"
 dash==2.0.0; python_version >= "3.6"
@@ -16,10 +16,10 @@ jinja2==3.0.3; python_version >= "3.6"
 markupsafe==2.0.1; python_version >= "3.6"
 mistune==2.0.2
 numpy==1.22.1
-pandas==1.3.5; python_full_version >= "3.7.1"
+pandas==1.4.0; python_version >= "3.8"
 plotly==5.5.0; python_version >= "3.6"
-python-dateutil==2.8.2; python_full_version >= "3.7.1"
-pytz==2021.3; python_full_version >= "3.7.1"
-six==1.16.0; python_full_version >= "3.7.1" and python_version >= "3.6"
+python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+pytz==2021.3; python_version >= "3.8"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 tenacity==8.0.1; python_version >= "3.6"
 werkzeug==2.0.2; python_version >= "3.6"
