--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ gunicorn = "^20.1.0"
 requests = "^2.27.1"
 pydantic = "^1.9.0"
 python-frontmatter = "^1.0.0"
+dash-extensions = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
