--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,39 @@
 brotli==1.0.9; python_version >= "3.6"
+certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
+charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
 click==8.0.4; python_version >= "3.6"
 colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.5.0"
-dash-core-components==2.0.0; python_version >= "3.6"
-dash-html-components==2.0.0; python_version >= "3.6"
+dash-core-components==2.0.0; python_version >= "3.7"
+dash-extensions==0.1.0; python_version >= "3.7"
+dash-html-components==2.0.0; python_version >= "3.7"
 dash-iconify==0.1.0
 dash-labs==1.0.3; python_version >= "3.6"
-dash-mantine-components==0.7.0
-dash-table==5.0.0; python_version >= "3.6"
+dash-mantine-components==0.8.0
+dash-table==5.0.0; python_version >= "3.7"
 dash==2.3.0; python_version >= "3.6"
-flask-compress==1.11; python_version >= "3.6"
-flask==2.0.3; python_version >= "3.6"
+editorconfig==0.12.3; python_version >= "3.7"
+flask-caching==1.10.1; python_version >= "3.7"
+flask-compress==1.11; python_version >= "3.7"
+flask==2.0.3; python_version >= "3.7"
 gunicorn==20.1.0; python_version >= "3.5"
+idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
 itsdangerous==2.1.2; python_version >= "3.7"
 jinja2==3.1.1; python_version >= "3.7"
+jsbeautifier==1.14.3; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7"
 mistune==2.0.2
+more-itertools==8.12.0; python_version >= "3.7"
 numpy==1.22.3
-pandas==1.4.1; python_version >= "3.8"
-plotly==5.6.0; python_version >= "3.6"
+pandas==1.4.2; python_version >= "3.8"
+plotly==5.6.0; python_version >= "3.7"
+pydantic==1.9.0; python_full_version >= "3.6.1"
 python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+python-frontmatter==1.0.0
 pytz==2022.1; python_version >= "3.8"
+pyyaml==6.0; python_version >= "3.6"
+requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 tenacity==8.0.1; python_version >= "3.6"
+typing-extensions==4.1.1; python_version >= "3.6" and python_full_version >= "3.6.1"
+urllib3==1.26.9; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
 werkzeug==2.0.3; python_version >= "3.6"
