--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pandas = "^1.4.2"
 dash-mantine-components = "^0.10.1"
 
 [tool.poetry.dev-dependencies]
-black = "^21.12b0"
+black = "22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
