--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ pydantic = "^1.9.0"
 python-frontmatter = "^1.0.0"
 dash-extensions = "^0.1.0"
 pandas = "^1.4.2"
-dash-mantine-components = "0.11.1"
 beautifulsoup4 = "^4.11.2"
+dash-mantine-components = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
