--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,9 @@ license = "MIT"
 python = "^3.8"
 dash = "^2.0.0"
 dash-iconify = "^0.1.0"
-mistune = "^2.0.2"
 gunicorn = "^20.1.0"
 requests = "^2.27.1"
-pydantic = "^1.9.0"
-python-frontmatter = "^1.0.0"
-pandas = "^1.4.2"
-beautifulsoup4 = "^4.11.2"
-dash-mantine-components = "^0.12.0"
+dash-mantine-components = "0.13.0a1"
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
