--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dash = "^2.0.0"
 dash-iconify = "^0.1.0"
 gunicorn = "^20.1.0"
 requests = "^2.27.1"
-dash-mantine-components = "0.13.0a1"
+dash-mantine-components = "0.13.0a2"
+markdown2dash = "^0.1.0a2"
+python-frontmatter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
