--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,34 @@
-ansi2html==1.8.0; python_version >= "3.6"
-beautifulsoup4==4.11.2; python_full_version >= "3.6.0"
-certifi==2022.9.24; python_version >= "3.7" and python_version < "4"
-charset-normalizer==2.1.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
-click==8.1.3; python_version >= "3.7"
+ansi2html==1.8.0; python_version >= "3.7"
+certifi==2023.7.22; python_version >= "3.7"
+charset-normalizer==3.2.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+click==8.1.7; python_version >= "3.7"
 colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0"
-dash-core-components==2.0.0; python_version >= "3.6"
-dash-html-components==2.0.0; python_version >= "3.6"
+dash-core-components==2.0.0; python_version >= "3.7"
+dash-html-components==2.0.0; python_version >= "3.7"
 dash-iconify==0.1.2
-dash-mantine-components==0.12.1
-dash-table==5.0.0; python_version >= "3.6"
-dash==2.11.1; python_version >= "3.6"
-flask==2.1.2; python_version >= "3.7"
+dash-mantine-components==0.13.0a3
+dash-table==5.0.0; python_version >= "3.7"
+dash==2.13.0; python_version >= "3.6"
+flask==2.2.5; python_version >= "3.7"
 gunicorn==20.1.0; python_version >= "3.5"
-idna==3.4; python_version >= "3.7" and python_version < "4"
-importlib-metadata==5.0.0; python_version < "3.10" and python_version >= "3.7"
+idna==3.4; python_version >= "3.7"
+importlib-metadata==6.8.0; python_version < "3.10" and python_version >= "3.8"
 itsdangerous==2.1.2; python_version >= "3.7"
 jinja2==3.1.2; python_version >= "3.7"
-markupsafe==2.1.1; python_version >= "3.7"
-mistune==2.0.5
-nest-asyncio==1.5.7; python_version >= "3.6"
-numpy==1.23.4
-pandas==1.5.1; python_version >= "3.8"
-plotly==5.11.0; python_version >= "3.6"
-pydantic==1.10.2; python_version >= "3.7"
-python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+jsonpath==0.82.2; python_version >= "3.7"
+markdown2dash==0.1.0a3; python_version >= "3.7"
+markupsafe==2.1.3; python_version >= "3.7"
+mistune==3.0.1; python_version >= "3.7"
+nest-asyncio==1.5.7; python_version >= "3.7"
+packaging==23.1; python_version >= "3.7"
+plotly==5.16.1; python_version >= "3.7"
 python-frontmatter==1.0.0
-pytz==2022.5; python_version >= "3.8"
-pyyaml==6.0; python_version >= "3.6"
-requests==2.28.1; python_version >= "3.7" and python_version < "4"
-retrying==1.3.4; python_version >= "3.6"
-six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
-soupsieve==2.4; python_version >= "3.7" and python_full_version >= "3.6.0"
-tenacity==8.1.0; python_version >= "3.6"
-typing-extensions==4.4.0; python_version >= "3.7"
-urllib3==1.26.12; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
-werkzeug==2.2.2; python_version >= "3.7"
-zipp==3.10.0; python_version < "3.10" and python_version >= "3.7"
+pyyaml==6.0.1; python_version >= "3.6"
+requests==2.31.0; python_version >= "3.7"
+retrying==1.3.4; python_version >= "3.7"
+six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+tenacity==8.2.3; python_version >= "3.7"
+typing-extensions==4.7.1; python_version >= "3.7"
+urllib3==2.0.4; python_version >= "3.7"
+werkzeug==2.2.3; python_version >= "3.7"
+zipp==3.16.2; python_version < "3.10" and python_version >= "3.8"
