--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.27.1"
 python-frontmatter = "^1.0.0"
 dash-mantine-components = "0.13.0a3"
 markdown2dash = "0.1.0a3"
+pydantic = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
