--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.5.0; python_version >= "3.7"
 ansi2html==1.8.0; python_version >= "3.7"
 certifi==2023.7.22; python_version >= "3.7"
 charset-normalizer==3.2.0; python_full_version >= "3.7.0" and python_version >= "3.7"
@@ -22,13 +23,15 @@ mistune==3.0.1; python_version >= "3.7"
 nest-asyncio==1.5.7; python_version >= "3.7"
 packaging==23.1; python_version >= "3.7"
 plotly==5.16.1; python_version >= "3.7"
+pydantic-core==2.6.3; python_version >= "3.7"
+pydantic==2.3.0; python_version >= "3.7"
 python-frontmatter==1.0.0
 pyyaml==6.0.1; python_version >= "3.6"
 requests==2.31.0; python_version >= "3.7"
 retrying==1.3.4; python_version >= "3.7"
 six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 tenacity==8.2.3; python_version >= "3.7"
-typing-extensions==4.7.1; python_version >= "3.7"
+typing-extensions==4.7.1; python_version < "3.9" and python_version >= "3.7"
 urllib3==2.0.4; python_version >= "3.7"
 werkzeug==2.2.3; python_version >= "3.7"
 zipp==3.16.2; python_version < "3.10" and python_version >= "3.8"
