--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python-frontmatter = "^1.0.0"
 dash-mantine-components = "0.13.0a3"
 markdown2dash = "0.1.0a3"
 pydantic = "^2.3.0"
+pandas = "1.0"
+numpy = "1.20"
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
