--- a/requirements.txt
+++ b/requirements.txt
@@ -21,15 +21,19 @@ markdown2dash==0.1.0a3; python_version >= "3.7"
 markupsafe==2.1.3; python_version >= "3.7"
 mistune==3.0.1; python_version >= "3.7"
 nest-asyncio==1.5.7; python_version >= "3.7"
+numpy==1.20.0; python_version >= "3.7"
 packaging==23.1; python_version >= "3.7"
+pandas==1.0.0; python_full_version >= "3.6.1"
 plotly==5.16.1; python_version >= "3.7"
 pydantic-core==2.6.3; python_version >= "3.7"
 pydantic==2.3.0; python_version >= "3.7"
+python-dateutil==2.8.2; python_full_version >= "3.6.1"
 python-frontmatter==1.0.0
+pytz==2023.3.post1; python_full_version >= "3.6.1"
 pyyaml==6.0.1; python_version >= "3.6"
 requests==2.31.0; python_version >= "3.7"
 retrying==1.3.4; python_version >= "3.7"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+six==1.16.0; python_full_version >= "3.6.1" and python_version >= "3.6"
 tenacity==8.2.3; python_version >= "3.7"
 typing-extensions==4.7.1; python_version < "3.9" and python_version >= "3.7"
 urllib3==2.0.4; python_version >= "3.7"
