--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,12 @@ dash-iconify = "^0.1.0"
 gunicorn = "^20.1.0"
 requests = "^2.27.1"
 python-frontmatter = "^1.0.0"
-dash-mantine-components = "0.13.0a4"
+dash-mantine-components = "0.13.0a3"
 markdown2dash = "0.1.0a3"
 pydantic = "^2.3.0"
 pandas = "1.0"
 numpy = "1.20"
+beautifulsoup4 = "^4.12.2"
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
