--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,8 @@
-annotated-types==0.7.0; python_version >= "3.8"
-blinker==1.8.2; python_version >= "3.8"
-certifi==2024.7.4; python_version >= "3.8"
-charset-normalizer==3.3.2; python_full_version >= "3.7.0" and python_version >= "3.8"
-click==8.1.7; python_version >= "3.8"
-colorama==0.4.6; python_version >= "3.8" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.8" and python_full_version >= "3.7.0"
-dash-core-components==2.0.0; python_version >= "3.8"
-dash-html-components==2.0.0; python_version >= "3.8"
-dash-iconify==0.1.2
-dash-mantine-components==0.14.7
-dash-table==5.0.0; python_version >= "3.8"
-dash==2.17.1; python_version >= "3.8"
-flask==3.0.3; python_version >= "3.8"
-gunicorn==21.2.0; python_version >= "3.5"
-idna==3.7; python_version >= "3.8"
-importlib-metadata==8.2.0; python_version < "3.10" and python_version >= "3.8"
-itsdangerous==2.2.0; python_version >= "3.8"
-jinja2==3.1.4; python_version >= "3.8"
-jsonpath==0.82.2; python_version >= "3.7"
-markdown2dash==0.1.1; python_version >= "3.7"
-markupsafe==2.1.5; python_version >= "3.8"
-mistune==3.0.2; python_version >= "3.7"
-nest-asyncio==1.6.0; python_version >= "3.8"
-packaging==24.1; python_version >= "3.8"
-plotly==5.23.0; python_version >= "3.8"
-pydantic-core==2.20.1; python_version >= "3.8"
-pydantic==2.8.2; python_version >= "3.8"
-python-frontmatter==1.1.0
-pyyaml==6.0.2; python_version >= "3.8"
-requests==2.32.3; python_version >= "3.8"
-retrying==1.3.4; python_version >= "3.8"
-six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
-tenacity==9.0.0; python_version >= "3.8"
-typing-extensions==4.12.2
-urllib3==2.2.2; python_version >= "3.8"
-werkzeug==3.0.3; python_version >= "3.8"
-zipp==3.19.2; python_version < "3.10" and python_version >= "3.8"
+dash>=2.5.0
+dash-iconify>=0.1.0
+requests>=2.27.1
+python-frontmatter>=1.0.0
+dash-mantine-components>=0.15
+pydantic>=2.3.0
+gunicorn>=21.2.0
+git+https://github.com/AnnMarieW/markdown2dash-amw.git#egg=markdown2dash
