update to use dash 2.18.2 and dmc 1.0.0rc1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dash = "^2.0.0"
 dash-iconify = "^0.1.0"
 requests = "^2.27.1"
 python-frontmatter = "^1.0.0"
-dash-mantine-components = "^0.15"
+dash-mantine-components = "1.0.0rc1"
 markdown2dash = {git = "https://github.com/AnnMarieW/markdown2dash-amw.git"}
 pydantic = "^2.3.0"
 gunicorn = "^21.2.0"
