--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.9"
 dash = "^3.0.0"
 dash-iconify = "^0.1.0"
+dash-ag-grid = "31.3.1"
 requests = "^2.27.1"
 python-frontmatter = "^1.0.0"
 dash-mantine-components = "^2.0.0"
